@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-09-11T08:21:33Z",
+  "timestamp" : "2022-09-12T08:24:47Z",
   "count_outdated" : 125,
   "uniques_outdated" : 86,
-  "count" : 140,
-  "uniques" : 96,
+  "count" : 138,
+  "uniques" : 95,
   "clones" : [
     {
       "timestamp": "2022-08-29T00:00:00Z",
-      "count": 8,
+      "count": 6,
       "count_minmax": [ 4, 8 ],
-      "uniques": 4,
+      "uniques": 3,
       "uniques_minmax": [ 3, 4 ]
     },
     {
