@@ -1,11 +1,11 @@
 {
-  "count": 15,
-  "uniques": 6,
+  "count": 13,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-08-29T00:00:00Z",
-      "count": 8,
-      "uniques": 4
+      "count": 6,
+      "uniques": 3
     },
     {
       "timestamp": "2022-08-31T00:00:00Z",
