@@ -1,3 +1,11 @@
+2022-09-12T08:24:47Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3035738205
+* notice: last 14d: unq all: 5 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 86 125 / 96 140
+* notice: next accum: outdated-unq outdated-all / unq all: 86 125 / 95 138
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -2 / +4 +8 -1 -2 / 3 6
+* notice: removed / changed dates: [] / [2022-08-29]
+
 2022-09-11T08:21:33Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3031105075
 * notice: last 14d: unq all: 6 15
